--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(jsonAccess)
 export(jsonElemAt)
 export(jsonElemAt_ifNumber)
+export(jsonElemAt_ifObject)
 export(jsonElemsAt)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
