--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,12 @@ export("%>%")
 export(jsonAccess)
 export(jsonElemAt)
 export(jsonElemAt_ifArray)
+export(jsonElemAt_ifBool)
 export(jsonElemAt_ifNumber)
 export(jsonElemAt_ifObject)
+export(jsonElemAt_ifString)
 export(jsonElemsAt)
+export(jsonMembers)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,validate)
