--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(jsonElemAt_ifObject)
 export(jsonElemAt_ifString)
 export(jsonElemsAt)
 export(jsonMembers)
+export(jsonPretty)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,validate)
