--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,4 +15,4 @@ importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,validate)
 importFrom(magrittr,"%>%")
-useDynLib(HSdll)
+useDynLib(JsonAccessR)
